# winsvc-continuum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: version.rc
src/: main.c  main.h  version.h
